@@ -1,6 +1,7 @@
 package me.paypur.tconjei.jei;
 
 import com.mojang.blaze3d.vertex.PoseStack;
+import me.paypur.tconjei.Utils;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
@@ -11,7 +12,7 @@ import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
-import net.minecraft.network.chat.contents.LiteralContents;
+import net.minecraft.network.chat.contents.TranslatableContents;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.phys.Vec2;
@@ -19,15 +20,13 @@ import slimeknights.tconstruct.library.tools.layout.LayoutSlot;
 import slimeknights.tconstruct.tools.TinkerTools;
 
 import javax.annotation.Nonnull;
-import java.util.Collections;
 import java.util.List;
 
 import static me.paypur.tconjei.TConJEI.MOD_ID;
-import static me.paypur.tconjei.TConJEI.inBox;
 
 public class ToolPartsCategory implements IRecipeCategory<ToolPartsWrapper> {
 
-    static final MutableComponent TITLE = MutableComponent.create(new LiteralContents("Tool Recipe"));
+    static final MutableComponent TITLE = MutableComponent.create(new TranslatableContents("tconjei.tool_parts"));
     static final RecipeType<ToolPartsWrapper> RECIPE_TYPE = RecipeType.create(MOD_ID, "tool_parts", ToolPartsWrapper.class);
     static final ResourceLocation UID = new ResourceLocation(MOD_ID, "tool_parts");
     final IDrawable background, icon, anvil, slot;
@@ -49,7 +48,9 @@ public class ToolPartsCategory implements IRecipeCategory<ToolPartsWrapper> {
         List<LayoutSlot> slots = recipe.getSlots();
         List<ItemStack> items = recipe.getDisplayParts();
 
-        assert items.size() == slots.size();
+        if (items.size() != slots.size()) {
+            return;
+        }
 
         Vec2 offsets = getOffsets(recipe);
         for (int i = 0; i < items.size(); i++) {
@@ -65,6 +66,10 @@ public class ToolPartsCategory implements IRecipeCategory<ToolPartsWrapper> {
             this.anvil.draw(stack, 65, 42);
         }
 
+        if (recipe.getSlots().isEmpty()) {
+            return;
+        }
+
         Vec2 offsets = getOffsets(recipe);
         for (LayoutSlot slot : recipe.getSlots()) {
             // need to offset by 1 because the inventory slot icons are 18x18
@@ -74,9 +79,9 @@ public class ToolPartsCategory implements IRecipeCategory<ToolPartsWrapper> {
 
     @Override
     public List<Component> getTooltipStrings(ToolPartsWrapper recipe, IRecipeSlotsView recipeSlotsView, double mouseX, double mouseY) {
-        return recipe.isBroadTool() && inBox(mouseX, mouseY, 65, 42, ITEM_SIZE, ITEM_SIZE) ?
-                Collections.singletonList(MutableComponent.create(new LiteralContents("Broad tools require a Tinker's Anvil!"))) :
-                    Collections.emptyList();
+        return recipe.isBroadTool() && Utils.inBox(mouseX, mouseY, 65, 42, ITEM_SIZE, ITEM_SIZE) ?
+                List.of(MutableComponent.create(new TranslatableContents("tconjei.tool_parts.anvil"))) :
+                    List.of();
     }
 
     private Vec2 getOffsets(ToolPartsWrapper recipe) {
